# wxlua-boilerplate

./: .gitignore
lua-app-example/lua-app/: catch.lua  main.lua  minimal.lua
macos-example/: .gitignore  build.sh  clean-xcproj.sh  prepare-macos-amd64.sh
macos-example/xcode-project/: wxlua-example
macos-example/xcode-project/Assets/: AppIcon.icns  run.sh  script4run
macos-example/xcode-project/wxlua-example.xcodeproj/: project.pbxproj
windows-example/: build-wxLuaLauncher-x64.cmd  build-wxLuaLauncher-x86.cmd  build-wxLuaLauncher.cmd  build.cmd  prepare.cmd  vsenv.cmd
windows-example/wxLuaLauncher/: .gitignore  CMakeLists.txt  VersionInfo.cmake  WinDeskLauncher.cpp  WinDeskLauncher.rc  resource.h  version.rc.in
work-dir/: build-luajit-mscos.sh  build-wxWidgets-macos.sh  build-wxlua-mscos.sh  fetch-dep-macos-amd64.sh  fetch-dep-macos-arm64.sh  fetch-dep.sh  fetch-deps.cmd  wxluarocks.sh
